--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,16 +1,11 @@
 <div class="d-flex flex-column font-weight-bold jumbotron justify-content-center animated fadeIn p-0" id="jumbotron">
   <div id="blurBox" class="p-4 text-center">
-    <p class="text-white animated delay-2s fadeInDown m-0">Jekyll theme by <a href="http://szhshp.org">Szhshp</a></p>
-    <p class="animated display-4 delay-2s fadeInDown text-white">Project Gaia</p>
+    <p class="text-white animated delay-2s fadeInDown m-0">20201415 조민석 <a href="https://github.com/kevincms/kevincms.github.io">Github blog</a></p>
+    <p class="animated display-4 delay-2s fadeInDown text-white">유레카 프로젝트 블로그 만들기</p>
     <p class="animated delay-2s fadeInDown font-weight-normal pt-2 text-white m-0">
-      V2.0
-      <br>
-      Powered by Jekyll, Bootstrap 4, JQuery 3
+     이 블로그는 유레카 프로젝트로부터 시작되어....
     </p>
-
     <p class="lead m-0">
-      <a class="btn-sm btn-light animated delay-2s fadeInUp" href="about.html#archivelist" role="button">What's
-        New?</a>
     </p>
   </div>
 </div>
