navbar.html modify

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,9 +14,9 @@
         </nav>
         <div class="tab-content" id=tab-content>
             <div class="tab-pane text-sm-center active animated fadeIn" id="sidebar-home-content">
-                <img class="site-author-image" itemprop="image" src="https://raw.githubusercontent.com/szhielelp/JekyllTheme-ProjectGaia/master/img/headshot.png">
-                <div class="text-warning">Szhshp</div>
-                <div class="text-white">To be different.</div>
+                <img class="site-author-image" itemprop="image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/The_emblem_of_Kookmin_University.svg/330px-The_emblem_of_Kookmin_University.svg.png">
+                <div class="text-warning">20201415 조민석</div>
+                <div class="text-white">세상은 운이다.</div>
                 {% include nav-links.html %}
             </div>
             <div class="tab-pane fade text-sm-left animated fadeIn" id="sidebar-toc-content">
@@ -32,9 +32,11 @@
             data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">{{site.title}}</a>
+        <a class="navbar-brand" href="#">
+            <!-- {{site.title}} -->
+        </a>
         <div class="collapse navbar-collapse" id="navbarNav">
-            {% include nav-links.html %}
+            <!-- {% include nav-links.html %} -->
         </div>
     </nav>
 </div>
