--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,8 +41,25 @@
    <script src="{{site.url}}{{site.baseurl}}/js/tocbot.min.js" type="text/javascript"></script>
    <script src="{{site.url}}{{site.baseurl}}/js/lightbox.js" type="text/javascript"></script>
    
-
-
+   {% if page.comments %}
+   <h2> Comments </h2> 
+   <div id="disqus_thread"></div>
+   <script>
+    let PAGE_URL="{{site.url}}{{page.url}}"
+    let PAGE_IDENTIFIER="{{page.url}}"
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  
+    this.page.identifier = PAGE_IDENTIFIER; 
+    };
+       (function() { 
+       var d = document, s = d.createElement('script');
+       s.src = 'https://yureka-peurojegteu.disqus.com/embed.js';
+       s.setAttribute('data-timestamp', +new Date());
+       (d.head || d.body).appendChild(s);
+       })();
+   </script>
+   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+   {% endif %}
 
 </body>
 </html>
