--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-7">
         <div class="page-header d-flex justify-content-between align-items-center" id="archives">
-          <h3 class="">Archives</h3>
+          <h3 class="">컴퓨터 및 코딩</h3>
           <input type="text" class="form-control ml-3 w-50 form-control-sm" id="post-search"
             placeholder="Press enter to search..." autocomplete="off">
         </div>
@@ -69,14 +69,14 @@
 
       <div class="col-md-5">
         <div class="page-header">
-          <h3>Header A</h3>
+          <h3>수학 과학</h3>
         </div>
-        <div>szhshp is awesome</div>
+        <div>아직 게시물이 없습니다.</div>
 
         <div class="page-header">
-          <h3>Header B</h3>
+          <h3>기타</h3>
         </div>
-        <div>szhshp is awesome</div>
+        <div>아직 게시물이 없습니다.</div>
       </div>
     </div>
   </div>
