--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,11 +2,11 @@
   <div class="container w-100">
     <div class="row">
       <div class="col-md-6">
-        <strong>CREDITS</strong>
+        <strong>세부사항</strong>
         <table class="table table-sm">
           <tr>
-            <td>Main Director:</td>
-            <td><a target="_blank" href="/intro.html">Szhshp</a></td>
+            <td>블로그 제작자:</td>
+            <td><a target="_blank">20201415 조민석</a></td>
           </tr>
           <tr>
             <td>Dev Engine:</td>
