--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -33,10 +33,10 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="#">
-            <!-- {{site.title}} -->
+            {{site.title}}
         </a>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <!-- {% include nav-links.html %} -->
+            {% include nav-links.html %}
         </div>
     </nav>
 </div>
