footer.html Modify

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,9 +30,9 @@
         </p>
       </div>
       <div class="col-md-6">
-        <strong>CONTACT</strong>
+        <strong>자세히</strong>
         <table class="table table-sm">
-          <tr><td><a target="_blank" href="https://github.com/szhielelp">Github</a></td></tr>
+          <tr><td><a target="_blank" href="http://jekyllthemes.org/themes/project-gaia/">Jekyll Themes - Project Gaia</a></td></tr>
         </table>
       </div>
     </div>
